[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://Graphics/fonts/AGENCYR.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Graphics/fonts/AGENCYB.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 52
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="GameManager" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 1.12247 )
start_population = 20
max_population = 200

[node name="StartInstructions" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 640 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StartInstructions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -16.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxLeft" type="VBoxContainer" parent="StartInstructions/HBoxContainer"]
margin_right = 428.0
margin_bottom = 608.0
size_flags_horizontal = 7
custom_constants/separation = 50

[node name="Title" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft"]
margin_right = 428.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Latest field data"

[node name="InfoBox" type="VBoxContainer" parent="StartInstructions/HBoxContainer/VBoxLeft"]
margin_top = 94.0
margin_right = 428.0
margin_bottom = 452.0
custom_constants/separation = 20

[node name="PopNumber" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_right = 428.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Curent population: 50"

[node name="Speeds" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 54.0
margin_right = 428.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Speed ratio 3 : 1"

[node name="PreyTime" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 108.0
margin_right = 428.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 2 )
text = "Prey procreation: 1 sec"

[node name="HunterTime" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 162.0
margin_right = 428.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "Predator survival: 3 sec"

[node name="HunterRatio" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 216.0
margin_right = 428.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "Predator ratio: 10%"

[node name="HunterHunger" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 270.0
margin_right = 428.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "Predator hunger: 3 "

[node name="ObsTime" type="Label" parent="StartInstructions/HBoxContainer/VBoxLeft/InfoBox"]
margin_top = 324.0
margin_right = 428.0
margin_bottom = 358.0
custom_fonts/font = SubResource( 2 )
text = "Observation time: 30 sec"

[node name="VBoxRight" type="VBoxContainer" parent="StartInstructions/HBoxContainer"]
margin_left = 448.0
margin_right = 896.0
margin_bottom = 608.0
size_flags_horizontal = 7
custom_constants/separation = 50
alignment = 2

[node name="Label" type="Label" parent="StartInstructions/HBoxContainer/VBoxRight"]
margin_top = 290.0
margin_right = 448.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 3 )
text = "Which species will survive?"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="StartInstructions/HBoxContainer/VBoxRight"]
margin_top = 398.0
margin_right = 448.0
margin_bottom = 608.0
custom_constants/separation = 30

[node name="BothButton" type="Button" parent="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer"]
margin_left = 99.0
margin_right = 349.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "Both"
__meta__ = {
"_editor_description_": ""
}

[node name="PreyButton" type="Button" parent="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer"]
margin_left = 99.0
margin_top = 80.0
margin_right = 349.0
margin_bottom = 130.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "Rabbits only"
__meta__ = {
"_editor_description_": ""
}

[node name="NoneButton" type="Button" parent="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer"]
margin_left = 99.0
margin_top = 160.0
margin_right = 349.0
margin_bottom = 210.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "None"
__meta__ = {
"_editor_description_": ""
}

[node name="RoundResult" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 960.0
margin_bottom = 640.0
rect_min_size = Vector2( 960, 640 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RoundResult"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -16.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedbackLabel" type="Label" parent="RoundResult/VBoxContainer"]
margin_top = 114.0
margin_right = 896.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 5 )
text = "You made the correct prediction!"
align = 1

[node name="ResultLabel" type="Label" parent="RoundResult/VBoxContainer"]
margin_top = 272.0
margin_right = 896.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 5 )
text = "Both wolves and rabbits survived!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RoundResult/VBoxContainer"]
margin_top = 430.0
margin_right = 896.0
margin_bottom = 494.0
custom_constants/separation = 200
alignment = 1

[node name="QuitButton" type="Button" parent="RoundResult/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 348.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Quit"

[node name="ContinueButton" type="Button" parent="RoundResult/VBoxContainer/HBoxContainer"]
margin_left = 548.0
margin_right = 748.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Continue"

[node name="OverallResult" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 640 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OverallResult"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -16.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="OverallResult/VBoxContainer"]
margin_top = 190.0
margin_right = 896.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 7 )
text = "Research finished!"
align = 1

[node name="QuitButton" type="Button" parent="OverallResult/VBoxContainer"]
margin_left = 148.0
margin_top = 353.0
margin_right = 748.0
margin_bottom = 417.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 8 )
text = "Back to main menu"

[node name="ObservationTimeLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = 752.0
margin_top = 14.0
margin_right = 928.0
margin_bottom = 58.0
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "Time left: 60"
align = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ObservationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer/BothButton" to="." method="_on_BothButton_pressed"]
[connection signal="pressed" from="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer/PreyButton" to="." method="_on_PreyButton_pressed"]
[connection signal="pressed" from="StartInstructions/HBoxContainer/VBoxRight/VBoxContainer/NoneButton" to="." method="_on_NoneButton_pressed"]
[connection signal="pressed" from="RoundResult/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RoundResult/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="OverallResult/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="ObservationTimer" to="." method="_on_ObservationTimer_timeout"]
